crates/biome_migrate/tests/specs/migrations/includes/invalid_globs.json.snap
---
source: crates/biome_migrate/tests/spec_tests.rs
expression: invalid_globs.json
---
# Input
```json
{
  "files": {
    "include": ["valid", "invalid?.js", "invalid[0-9].js"]
  }
}

```

# Diagnostics
```
invalid_globs.json:3:5 migrate  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! include and ignore configurations have been replaced by the includes configuration.
  
    1 │ {
    2 │   "files": {
  > 3 │     "include": ["valid", "invalid?.js", "invalid[0-9].js"]
      │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    4 │   }
    5 │ }
  
  i This glob cannot be converted to the new glob format because it generates the follosing error: `?` matcher is not supported. Use `\?` to escape the character.
  
    1 │ {
    2 │   "files": {
  > 3 │     "include": ["valid", "invalid?.js", "invalid[0-9].js"]
      │                                  ^
    4 │   }
    5 │ }
  
  i This glob cannot be converted to the new glob format because it generates the follosing error: Character class `[]` are not supported. Use `\[` and `\]` to escape the characters.
  
    1 │ {
    2 │   "files": {
  > 3 │     "include": ["valid", "invalid?.js", "invalid[0-9].js"]
      │                                                 ^
    4 │   }
    5 │ }
  
  i Safe fix: Use includes instead.
  
    1 1 │   {
    2 2 │     "files": {
    3   │ - ····"include":·["valid",·"invalid?.js",·"invalid[0-9].js"]
      3 │ + ····"includes":·["**/valid/**"]
    4 4 │     }
    5 5 │   }
  

```
